--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,29 @@
-## Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
-## Use either `docker-compose` or individual `docker build` commands
-## Build
-  - docker build -t udagram-api-feed ./udagram-api-feed
-  - docker build -t udagram-api-user ./udagram-api-user
-  - docker build -t udagram-api-frontend ./udagram-api-frontend
-  - docker build -t reverseproxy ./reverseproxy
-## Tagging
+language: node_js
+node_js:
+  - 13
+
+services:
+  - docker
+
+# Pre-testing installs
+install:
+  - echo "nothing needs to be installed"
+
+# Scripts to be run such as tests
+before_script:
+  - echo "no tests"
+
+script:
+  - docker --version # print the version for logging
+  - docker-compose -f docker-compose-build.yaml build --parallel
   - docker tag udagram-api-feed nhanhx/udagram-api-feed:v1
   - docker tag udagram-api-user nhanhx/udagram-api-user:v1
-  - docker tag udagram-api-frontend nhanhx/udagram-api-frontend:v1
   - docker tag reverseproxy nhanhx/reverseproxy:v1
-```bash
-## Push
-## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
+  - docker tag udagram-frontend nhanhx/udagram-frontend:v1
+
+after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push nhanhx/udagram-api-feed:v1
   - docker push nhanhx/udagram-api-user:v1
-  - docker push nhanhx/udagram-api-frontend:v1
   - docker push nhanhx/reverseproxy:v1
+  - docker push nhanhx/udagram-frontend:v1
